--- a/app/views/pages/about.ru.liquid
+++ b/app/views/pages/about.ru.liquid
@@ -3,14 +3,14 @@ title: о
 listed: true
 published: true
 position: 2
-meta_description: "Страница \"о\" веб-сайта Центра для дружбы Франко - русской и Франко - китайский"
+meta_description: "О странице для искусства Дворец Наций - Генеральной текста и список членов художественного Дворце Наций"
 
 editable_elements:
     'content/header/featured_photo/legend': "Дали и Лицзян"
     'content/main/about_body':
       "
         <p>
-          Благодарим Вас за посещение страницы Центра франко - русский - китайский Франко и дружбы. Наши цели центр на то, чтобы мир Место Доминируют триады великих держав, что поработить волю все обзоры других людей мира к ИКТ общего культурного идеология.
+          Благодарим Вас за посещение страницы искусств Дворец Наций. Наш центр стремится сделать мир место доминируют триады сверхдержав, которые порабощают все другие люди мира, чтобы его общего культурного идеологии.
         </p>
         <p>
           Мы искренне надеемся, что вам нравится наш проект и Вы присоединитесь к нам доминирующей мир.
