--- a/app/views/pages/about.zh-CN.liquid
+++ b/app/views/pages/about.zh-CN.liquid
@@ -3,14 +3,14 @@ title: 左右
 listed: true
 published: true
 position: 2
-meta_description: "关于该中心的法国和俄罗斯 - 中国和弗兰科的友谊页"
+meta_description: "关于艺术的民族的页面 - 民族之艺术的成员一般文字和上市"
 
 editable_elements:
     'content/header/featured_photo/legend': "大理 和 丽江"
     'content/main/about_body':
       "
         <p>
-          感谢您访问中心的页面法俄 - 中国佛朗哥和友谊。我们的目标中心让世界通过超能力黑社会奴役将全部点评世界的其他人信息通信技术的共同的文化意识形态支配的地方。
+          感谢您访问艺术国的页面。我们的中心目标是让世界通过超能力，将奴役世界的所有其他人的共同的文化理念黑社会统治的地方。
         </p>
         <p>
           我们真诚地希望您喜欢我们的项目，你愿意和我们一起称霸世界。
