--- a/app/views/pages/contact.liquid
+++ b/app/views/pages/contact.liquid
@@ -3,9 +3,8 @@ title: Contact
 published: true
 listed: true
 handle: contact
-meta_description:
-meta_description: "Contact Page of the Website of the Centre for the Franco-Russian and Franco-Chinese Friendships"
-seo_title: "Contact Page of the Website of the Centre for the Franco-Russian and Franco-Chinese Friendships"
+meta_description: "Contact Page of the Website of Art des Nations"
+seo_title: "Contact Page of the Website of Art des Nations"
 position: 3
 ---
 {% extends 'layouts/simple' %}
