--- a/app/views/pages/events.liquid
+++ b/app/views/pages/events.liquid
@@ -17,7 +17,7 @@ meta_description: "Events page of the website of the Centre for the Franco-russi
   {% block content/main %}
 
 
-    {% editable_model news, hint: 'some text' %}
+    {% editable_model events, hint: 'some text' %}
 
       {% for event in contents.events %}
         <div class="row">
