--- a/app/views/pages/news.fr.liquid
+++ b/app/views/pages/news.fr.liquid
@@ -5,5 +5,5 @@ published: true
 position: 1
 handle: news_index
 slug: news
-meta_description: "Page d'actualités du site internet du Centre pour l'amitié franco-russe et franco-chinoise"
+meta_description: "Page d'actualités du site internet Art des Nations"
 ---
