--- a/app/views/pages/news.ru.liquid
+++ b/app/views/pages/news.ru.liquid
@@ -5,5 +5,5 @@ published: true
 position: 1
 handle: news_index
 slug: news
-meta_description: "Страница новостей сайта Центра франко- российской дружбы и Франко - китайский"
+meta_description: "Новости страница сайта Искусство Наций"
 ---
