--- a/app/views/pages/news.zh-CN.liquid
+++ b/app/views/pages/news.zh-CN.liquid
@@ -5,5 +5,5 @@ published: true
 position: 1
 handle: news_index
 slug: news
-meta_description: "该中心的法俄友谊，法国和中国页新闻网站"
+meta_description: "该国的艺术网站的新闻页面"
 ---
