--- a/app/views/snippets/header_side_nav_stuffs.liquid
+++ b/app/views/snippets/header_side_nav_stuffs.liquid
@@ -1,4 +1,10 @@
 {% comment %} Variables definitions {% endcomment %}
+{% comment %}FIXME
+- Look at this file in commit 3a6d1296c4efe43ad430d9ad8bbf749dd222c173
+- for icon_logo_url to work with the latest version of the engine, I had to move the correspoonding asset to the public/image directory
+- the icon_logo should be turned into an editable element
+- pending fix of the editable_file tag by did
+{% endcomment %}
 {% assign icon_logo_url = 'logo.png' | theme_image_url %}
 {% assign logo_alt = 'Exemple Logo' %}
 {% assign large_resize = '131x66' %}
