--- a/app/views/pages/news/content_type_template.liquid
+++ b/app/views/pages/news/content_type_template.liquid
@@ -26,7 +26,10 @@ content_type: news
             <p class="tags">
               <i class="glyphicon glyphicon-tags"></i>
               {% for tag in news.tags %}
-                <span class="label label-primary">{{ tag | escape }}</span>
+                {% capture path_to_parent %}{% path_to page.parent %}{% endcapture %}
+                <a href="{{ path_to_parent | concat: '?selected_tag=' | concat: tag }}">
+                  <span class="label label-primary">{{ tag | escape }}</span>
+                </a>
               {% endfor %}
             </p>
           {% endif %}
@@ -36,7 +39,9 @@ content_type: news
           </div>
 
           <div class="news-author">
-            {{ news.site_member.full_name }}
+            <a href="{% path_to news.site_member %}">
+              {{ "by" | translate }}&#8239;{{ news.site_member.full_name }}
+            </a>
           </div>
 
         </div>
@@ -51,7 +56,7 @@ content_type: news
                 {% assign size = '350x300#' %}
                 {% include 'img_box' with photo: photo.file, legend, size  %}
               </div>
-              {% cycle  '', '<div class="clearfix visible-xs">&nbsp;</div>' %}
+              {% cycle '', '<div class="clearfix visible-xs">&nbsp;</div>' %}
               {% cycle '', '', '<div class="clearfix visible-sm ">&nbsp;</div>' %}
               {% cycle '', '', '', '<div class="clearfix hidden-sm hidden-xs">&nbsp;</div>' %}
             {% endfor %}
