--- a/app/views/snippets/main_header.liquid
+++ b/app/views/snippets/main_header.liquid
@@ -21,7 +21,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 16">
               <path fill="#CCC" d="M0 0h20v2H0zM0 7h20v2H0zM0 14h20v2H0z"></path>
             </svg>
-          </div><span>{{ 'Menu' | translate | strip }}</span>
+          </div><span>{{ 'menu' | translate | strip }}</span>
         </a>
       </div>
     </div>
